--- a/package.json
+++ b/package.json
@@ -12,15 +12,10 @@
     "dependencies": {
         "GizWifiCordovaSDK": "file:///Users/gzbigegg/Documents/workspace/gizwits/xb_group/GizWifiCordovaSDK",
         "cordova-android": "^6.2.3",
-        "cordova-ios": "^4.4.0",
-        "cordova-plugin-whitelist": "^1.3.2",
-        "com.gizwits.cordova.wifi": "/Users/gzbigegg/Documents/workspace/gizwits/xb_group/GizWifiCordovaSDK"
+        "cordova-ios": "^4.4.0"
     },
     "cordova": {
-        "plugins": {
-            "cordova-plugin-whitelist": {},
-            "com.gizwits.cordova.wifi": {}
-        },
+        "plugins": {},
         "platforms": [
             "android",
             "ios"
