--- a/package.json
+++ b/package.json
@@ -17,15 +17,13 @@
         "cordova-ios": "^4.4.0",
         "cordova-plugin-appavailability": "^0.4.2",
         "cordova-plugin-compat": "^1.1.0",
-        "cordova-plugin-exitapp": "^1.0.0",
         "cordova-plugin-network-information": "^1.3.3",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-vibration": "^2.1.5",
         "cordova.custom.plugins.exitapp": "~1.0.0",
         "ionic-plugin-keyboard": "^2.2.1",
-        "phonegap-plugin-barcodescanner": "^6.0.6",
-        "wifiwizard": "^0.2.11"
+        "phonegap-plugin-barcodescanner": "^6.0.6"
     },
     "cordova": {
         "plugins": {
