--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
     "license": "Apache-2.0",
     "dependencies": {
         "GizWifiCordovaSDK": "file:///Users/kylewang/Documents/project/GizWifiCordovaSDK",
+        "com.gizwits.cordova.wifi": "../GizWifiCordovaSDK",
         "com.pylonproducts.wifiwizard": "~0.2.11",
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-appavailability": "^0.4.2",
         "cordova-plugin-compat": "^1.1.0",
+        "cordova-plugin-device": "^1.1.6",
         "cordova-plugin-network-information": "^1.3.3",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-vibration": "^2.1.5",
         "cordova.custom.plugins.exitapp": "~1.0.0",
         "ionic-plugin-keyboard": "^2.2.1",
-        "phonegap-plugin-barcodescanner": "^6.0.6",
-        "com.gizwits.cordova.wifi": "../GizWifiCordovaSDK"
+        "phonegap-plugin-barcodescanner": "^6.0.6"
     },
     "cordova": {
         "plugins": {
@@ -38,7 +39,8 @@
             "phonegap-plugin-barcodescanner": {
                 "CAMERA_USAGE_DESCRIPTION": " "
             },
-            "com.gizwits.cordova.wifi": {}
+            "com.gizwits.cordova.wifi": {},
+            "cordova-plugin-device": {}
         },
         "platforms": [
             "android",
