--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "author": "Apache Cordova Team",
     "license": "Apache-2.0",
     "dependencies": {
-        "com.gizwits.cordova.wifi": "git+https://gitlab.gizwits.com/xb/cordova-wifisdk-plugin.git#0.5.0",
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-appavailability": "^0.4.2",
@@ -22,7 +21,7 @@
         "cordova-plugin-vibration": "^2.1.5",
         "ionic-plugin-keyboard": "^2.2.1",
         "phonegap-plugin-barcodescanner": "^6.0.7",
-        "wifiwizard": "git+https://github.com/gizwits/WifiWizard.git#2.12"
+        "com.pylonproducts.wifiwizard": "git+https://github.com/gizwits/WifiWizard.git#2.12"
     },
     "cordova": {
         "plugins": {
@@ -35,10 +34,10 @@
             "phonegap-plugin-barcodescanner": {
                 "CAMERA_USAGE_DESCRIPTION": " "
             },
-            "com.gizwits.cordova.wifi": {},
             "cordova-plugin-device": {},
             "com.pylonproducts.wifiwizard": {},
-            "Umeng": {}
+            "Umeng": {},
+            "com.gizwits.cordova.wifi": {}
         },
         "platforms": [
             "android"
