--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
         "cordova-ios": "^4.4.0",
         "cordova-plugin-appavailability": "^0.4.2",
         "cordova-plugin-compat": "^1.1.0",
+        "cordova-plugin-crosswalk-webview": "^2.3.0",
         "cordova-plugin-device": "^1.1.6",
         "cordova-plugin-network-information": "^1.3.3",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-vibration": "^2.1.5",
+        "cordova-plugin-whitelist": "^1.3.2",
         "ionic-plugin-keyboard": "^2.2.1",
         "phonegap-plugin-barcodescanner": "^6.0.7",
         "wifiwizard": "git+https://github.com/gizwits/WifiWizard.git#2.12"
@@ -38,7 +40,15 @@
             "cordova-plugin-device": {},
             "com.pylonproducts.wifiwizard": {},
             "Umeng": {},
-            "com.gizwits.cordova.wifi": {}
+            "com.gizwits.cordova.wifi": {},
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-crosswalk-webview": {
+                "XWALK_VERSION": "23+",
+                "XWALK_LITEVERSION": "xwalk_core_library_canary:17+",
+                "XWALK_COMMANDLINE": "--disable-pull-to-refresh-effect",
+                "XWALK_MODE": "embedded",
+                "XWALK_MULTIPLEAPK": "true"
+            }
         },
         "platforms": [
             "android",
