--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "author": "Apache Cordova Team",
     "license": "Apache-2.0",
     "dependencies": {
-        "com.pylonproducts.wifiwizard": "https://github.com/gizwits/WifiWizard.git#2.12",
+        "com.pylonproducts.wifiwizard": "https://github.com/gizwits/WifiWizard.git#2.14",
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
         "cordova-open-native-settings": "^1.4.1",
@@ -24,8 +24,7 @@
         "cordova-plugin-vibration": "^2.1.5",
         "cordova-plugin-whitelist": "^1.3.2",
         "ionic-plugin-keyboard": "^2.2.1",
-        "phonegap-plugin-barcodescanner": "^6.0.7",
-        "wifiwizard": "git+https://github.com/gizwits/WifiWizard.git#2.12"
+        "phonegap-plugin-barcodescanner": "^6.0.7"
     },
     "cordova": {
         "plugins": {
