--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
         "cordova-open-native-settings": "^1.4.1",
+        "cordova-plugin-app-version": "^0.1.9",
         "cordova-plugin-appavailability": "^0.4.2",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-crosswalk-webview": "^2.3.0",
@@ -47,7 +48,8 @@
                 "XWALK_MODE": "embedded",
                 "XWALK_MULTIPLEAPK": "true"
             },
-            "cordova-open-native-settings": {}
+            "cordova-open-native-settings": {},
+            "cordova-plugin-app-version": {}
         },
         "platforms": [
             "android",
