--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "cordova-plugin-statusbar": "https://github.com/gizwits/cordova-plugin-statusbar.git#rel/2.2.5",
         "cordova-plugin-vibration": "^2.1.5",
         "cordova-plugin-whitelist": "^1.3.2",
+        "cordova-plugin-wkwebview-engine": "https://github.com/ionic-team/cordova-plugin-wkwebview-engine.git#rel/1.0.3",
         "ionic-plugin-keyboard": "^2.2.1",
         "phonegap-plugin-barcodescanner": "^6.0.7"
     },
